--- a/app/views/diary_entries/show.html.erb
+++ b/app/views/diary_entries/show.html.erb
@@ -1,6 +1,9 @@
 <% if flash[:notice] %>
   <p style="color: green"><%= flash[:notice] %></p>
 <% end %>
+<% if flash[:alert] %>
+  <p style="color: red"><%= flash[:alert] %></p>
+<% end %>
 
 <% unless user_signed_in? %>
   <!-- Demo Mode Banner -->
@@ -36,6 +39,7 @@
         <span>Images (<%= @diary_entry.images.count %>)</span>
       </span>
     </h3>
+
     <div class="columns is-multiline">
       <% @diary_entry.images.each_with_index do |image, index| %>
         <div class="column is-3">
@@ -43,8 +47,8 @@
             <div class="card-image">
               <figure class="image is-4by3">
                 <% begin %>
-                  <%= image_tag image, 
-                      class: "is-rounded", 
+                  <%= image_tag image,
+                      class: "is-rounded",
                       style: "width: 100%; height: 100%; object-fit: cover; cursor: pointer;",
                       onclick: "openImageModal('modal-#{index}')",
                       loading: "lazy" %>
@@ -58,20 +62,19 @@
                 <% end %>
               </figure>
             </div>
+
             <div class="card-content">
               <div class="content">
-                <p class="is-size-7 has-text-grey">
-                  <%= image.blob.filename %>
-                </p>
-                <p class="is-size-7 has-text-grey">
-                  <%= number_to_human_size(image.blob.byte_size) %>
-                </p>
+                <p class="is-size-7 has-text-grey"><%= image.blob.filename %></p>
+                <p class="is-size-7 has-text-grey"><%= number_to_human_size(image.blob.byte_size) %></p>
+
                 <% if user_signed_in? && current_user == @diary_entry.user %>
-                  <%= form_with url: diary_entry_image_path(@diary_entry.id, image.id), method: :delete, local: true, class: "is-inline-block" do |form| %>
-                    <%= form.submit "Delete", 
+                  <%= button_to "Delete",
+                        image_diary_entry_path(@diary_entry, image_id: image.id),
+                        method: :delete,
+                        form: { data: { turbo: false }, class: "is-inline-block" },
                         class: "button is-small is-danger is-outlined",
                         data: { confirm: "Are you sure you want to delete this image?" } %>
-                  <% end %>
                 <% end %>
               </div>
             </div>
@@ -93,17 +96,18 @@
   </div>
 <% end %>
 
-<div class="mt-4">
-  <%= link_to "Edit", edit_diary_entry_path(@diary_entry), class: "button is-info" %>
+<div class="mt-4 is-flex is-align-items-center is-gap-2">
+  <% if user_signed_in? && current_user == @diary_entry.user %>
+    <%= link_to "Edit", edit_diary_entry_path(@diary_entry), class: "button is-info" %>
+    <%= button_to "Delete", @diary_entry, method: :delete, data: { confirm: "Are you sure?" }, class: "button is-danger" %>
+  <% end %>
   <%= link_to "Back", diary_entries_path, class: "button is-light" %>
-  <%= button_to "Delete", @diary_entry, method: :delete, data: { confirm: "Are you sure?" }, class: "button is-danger" %>
 </div>
 
 <script>
 function openImageModal(modalId) {
   document.getElementById(modalId).classList.add('is-active');
 }
-
 function closeImageModal(modalId) {
   document.getElementById(modalId).classList.remove('is-active');
 }
